Sat Sep 14 03:41:15 1996  Gary Houston  <ghouston@actrix.gen.nz>

	* PLUGIN/REQ: remove the "ice-9 lgh" line which causes a cycle.

	* boot-9.scm: remove leading %% from references to '%%system-error.
	(%%handle-system-error): don't pass all the thrown arguments when
	aborting, just the key and subr.
	Remove the code to "Install default handlers for built-in errors."
	Remove the definition of the syserror procedure.
	Associate 'numerical-overflow with default handler.

Fri Sep 13 04:58:11 1996  Mikael Djurfeldt  <mdj@woody.nada.kth.se>

	* boot-9.scm: Name change: value-ref --> local-ref
	resolved-ref --> nested-ref  Motivation: conformance to the other
	dictionary operators: list-ref operates on list, vector-ref
	operates on vector, nested-ref operates on nested namespace,
	local-ref operates on the local nested namespace.

Sat Sep  7 06:44:47 1996  Gary Houston  <ghouston@actrix.gen.nz>

	* boot-9.scm (%%handle-system-error): recognise errors thrown
	by lgh-error (fill-message etc.)
	(fill-message): check first whether args is null.
	(fill-message): bug fix and check that args is a list.

Thu Sep  5 11:33:41 1996  Jim Blandy  <jimb@floss.cyclic.com>

	* boot-9.scm: %load-path is initialized in C code now.
	(implementation-vicinity, parse-path): Deleted, along with code to
	initialize %load-path.

	* boot-9.scm (in-vicinity): If the vicinity doesn't end with a
	"/", use one to separate it from the file.

Thu Aug 29 23:05:11 1996  Thomas Morgan  <tmorgan@gnu.ai.mit.edu>

	* boot-9.scm (%load-path): Add the site directory.
	Add the directory named after the version number.
	Prepend the version number to the other directories in the path.
	Simplify by mapping the common prefix onto each item.
	* Makefile.in (datadir, pkgdatadir, pkgverdatadir, subpkgdatadir,
	sitedatadir): New definitions.
	(libparent, libdir, install_path): Replaced by above.
	(install): Create the above directories.
	Put the source files into subpkgdatadir.